hoping to stop horizontal scroll

--- a/tasker_main_app/static/css/base.css
+++ b/tasker_main_app/static/css/base.css
@@ -140,6 +140,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
+    overflow-x: hidden;
     max-height: 500px;
     height: 500px;
   }
